--- a/.github/workflows/activity.yml
+++ b/.github/workflows/activity.yml
@@ -1,23 +1,22 @@
-name: Update README Activity
+name: Update README with Activity
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Run every hour
-  workflow_dispatch:      # Allow manual trigger
+    - cron: '0 * * * *'
+  workflow_dispatch:
 
 permissions:
   contents: write
-
+  
 jobs:
-  update-activity:
+  update:
     runs-on: ubuntu-latest
-    
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Update activity in README
-        uses: Readme-Workflows/recent-activity@main
         with:
-          GH_USERNAME: markusmikely
+          fetch-depth: 0
+          
+      - name: GitHub Activity Readme
+        uses: jamesgeorge007/github-activity-readme@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
